Fix conda channels ordering for gpt client
Signed-off-by: Paolo Di Tommaso <paolo.ditommaso@gmail.com>